--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -42,17 +42,20 @@
 
         <div class="col-xl-9 col-lg-9">
             <div class="row">
-                {% for product in subcategory.products.all %}
+                {% for offer in offers %}
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                         <div class="product-item mb-5 cp">
-                            <img src="{{ product.get_main_image.image.url|resize:'product_list_resize' }}" class="w-100 product-item-img mb-2" alt="">
+                            <img src="{{ offer.product.get_main_image.image.url|resize:'product_list_resize' }}" class="w-100 product-item-img mb-2" alt="">
                             <div class="eq-h mb-2">
-                                <a href="{{ product.get_absolute_url }}" class="stretched-link text-dark smaller">{{ product.name }}</a>
-                                <span class="d-block small text-muted">{{ product.category.name }}</span>
+                                <a href="{{ offer.product.get_absolute_url }}" class="stretched-link text-dark smaller">{{ offer.product.name }}</a>
+                                <span class="d-block small text-muted">{{ offer.product.category.name }}</span>
                             </div>
-                            <!--<span class="font-2 mr-2"><del>940</del></span>-->
-                            <!--<span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                            <span class="font-2 text-dark">880<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
+                            {% if offer.sale %}
+                                <span class="font-2 mr-2"><del>{{ offer.price_without_sale }}</del></span>
+                                <span class="font-2 text-danger">{{ offer.price }}<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
+                            {% else %}
+                                <span class="font-2 text-dark">{{ offer.price }}<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
