--- a/templates/__header.html
+++ b/templates/__header.html
@@ -71,34 +71,37 @@
 
         <div class="collapse navbar-collapse basis-100">
             <ul class="nav navbar-nav ml-auto">
-
-
-                <li class="nav-item">
-                    <a class="nav-link smaller pl-0 pr-4" href="login.html">Войти</a>
-                </li>
-
-
-                <!--
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle smaller pl-0 pr-4" href="orders.html">
-                <i class="far fa-user text-primary mr-2"></i>Профиль
-                </a>
-                <div class="dropdown-menu shadow border-0">
-                <a class="dropdown-item small" href="orders.html">Мои заказы</a>
-                <a class="dropdown-item small" href="profile.html">Мои данные</a>
-                <hr class="my-2">
-                <a class="dropdown-item small" href="#">Выход</a>
-                </div>
-                </li>
-                -->
-
-                <li class="nav-item">
-                    <a class="nav-link smaller px-0" href="cart.html"><i class="fas fa-shopping-basket mr-2"></i>Корзина</a>
-                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle smaller pl-0 pr-4" href="orders.html">
+                            <i class="far fa-user text-primary mr-2"></i>Профиль
+                        </a>
+                        <div class="dropdown-menu shadow border-0">
+                            <a class="dropdown-item small" href="orders.html">Мои заказы</a>
+                            <a class="dropdown-item small" href="profile.html">Мои данные</a>
+                            <hr class="my-2">
+                            <a class="dropdown-item small" href="#">Выход</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smaller px-0" href="{% url 'cart' %}">
+                            <i class="fas fa-shopping-basket mr-2"></i>
+                            Корзина | 
+                            <strong class="cart-len text-primary smaller">{{ cart_len }}</strong>
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link smaller pl-0 pr-4" href="login.html">Войти</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smaller px-0" href="{% url 'cart' %}"><i class="fas fa-shopping-basket mr-2"></i>Корзина</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
 
-        <a class="smaller px-0 text-dark d-block d-lg-none" href="cart.html"><i class="fas fa-shopping-basket mr-2"></i>Корзина</a>
+        <a class="smaller px-0 text-dark d-block d-lg-none" href="{% url 'cart' %}"><i class="fas fa-shopping-basket mr-2"></i>Корзина</a>
 
         <div class="d-lg-none offcanvas-collapse">
             <div class="container px-0 px-sm-3 pt-2">
