--- a/templates/__scripts.html
+++ b/templates/__scripts.html
@@ -12,5 +12,6 @@
 <script src="{% static 'js/jquery.maskedinput.min.js' %}"></script>
 <script src="{% static 'js/jquery.matchHeight-min.js' %}"></script>
 <script src="{% static 'js/smoothproducts.js' %}"></script>
+<script src="{% static 'js/bootstrap-input-spinner.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
 <script src="{% static 'js/back.js' %}"></script>
