--- a/templates/orders/cart.html
+++ b/templates/orders/cart.html
@@ -38,7 +38,11 @@
     <div class="border-top pt-4 mb-5 text-right"><span class="mr-3 font-2 smaller text-muted">Сумма покупки:</span><span class="total-price font-2 h4 text-primary font-weight-bolder">{{ cart.get_total_price }}<i class="fas fa-ruble-sign fa-xs ml-1"></i></span></div>
 
     <div class="d-flex justify-content-end pb-5">
-        <a href="cart-address.html" class="btn btn-primary btn-sm font-2">продолжить<i class="fas fa-chevron-right fa-sm ml-3"></i></a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'cart_address' %}" class="btn btn-primary btn-sm font-2">продолжить<i class="fas fa-chevron-right fa-sm ml-3"></i></a>
+        {% else %}
+            <a href="#" class="btn btn-primary btn-sm font-2">продолжить<i class="fas fa-chevron-right fa-sm ml-3"></i></a>
+        {% endif %}
     </div>
 </div>
 {% endblock content %}
