--- a/templates/contacts/__feedback_modal.html
+++ b/templates/contacts/__feedback_modal.html
@@ -40,7 +40,7 @@
                
             </div>
             <div class="modal-footer">
-                <p class="text-muted small m-0">Нажимая кнопку "<i class="fas fa-paper-plane mr-1 fa-xs"></i>отправить", вы даёте согласие на <a href="agreement.html" target="_blank">обработку персональных данных</a></p>
+                <p class="text-muted small m-0">Нажимая кнопку "<i class="fas fa-paper-plane mr-1 fa-xs"></i>отправить", вы даёте согласие на <a href="{% url 'agreement' %}" target="_blank">обработку персональных данных</a></p>
             </div>
 
             <div class="modal-form-success">
