--- a/templates/__header.html
+++ b/templates/__header.html
@@ -73,14 +73,14 @@
             <ul class="nav navbar-nav ml-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle smaller pl-0 pr-4" href="orders.html">
+                        <a class="nav-link dropdown-toggle smaller pl-0 pr-4" href="{% url 'user_orders' %}">
                             <i class="far fa-user text-primary mr-2"></i>Профиль
                         </a>
                         <div class="dropdown-menu shadow border-0">
-                            <a class="dropdown-item small" href="orders.html">Мои заказы</a>
-                            <a class="dropdown-item small" href="profile.html">Мои данные</a>
+                            <a class="dropdown-item small" href="{% url 'user_orders' %}">Мои заказы</a>
+                            <a class="dropdown-item small" href="{% url 'profile' %}">Мои данные</a>
                             <hr class="my-2">
-                            <a class="dropdown-item small" href="#">Выход</a>
+                            <a class="dropdown-item small" href="{% url 'logout' %}">Выход</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -92,7 +92,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link smaller pl-0 pr-4" href="login.html">Войти</a>
+                        <a class="nav-link smaller pl-0 pr-4" href="{% url 'login' %}">Войти</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link smaller px-0" href="{% url 'cart' %}"><i class="fas fa-shopping-basket mr-2"></i>Корзина</a>
@@ -118,11 +118,11 @@
 
                     {% if not user.is_authenticated %}
                         <li class="nav-item mb-2">
-                            <a class="nav-link py-2 smaller" href="login.html"><i class="far fa-user text-primary mr-2"></i>Войти</a>
+                            <a class="nav-link py-2 smaller" href="{% url 'login' %}"><i class="far fa-user text-primary mr-2"></i>Войти</a>
                         </li>
                     {% else %}
                         <li class="nav-item mb-2">
-                            <a class="nav-link py-2 smaller" href="orders.html"><i class="far fa-user text-primary mr-2"></i>Профиль<i class="fas fa-chevron-right fa-xs ml-2"></i></a>
+                            <a class="nav-link py-2 smaller" href="{% url 'user_orders' %}"><i class="far fa-user text-primary mr-2"></i>Профиль<i class="fas fa-chevron-right fa-xs ml-2"></i></a>
                         </li>
                     {% endif %}
                    
