--- a/templates/orders/cart_address.html
+++ b/templates/orders/cart_address.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <p class="mb-3">Мы сообщим вам когда заказ будет доступен для самовывоза</p>
-                        <p class="text-muted small mb-3">Заполняя данную форму, вы даёте согласие на <a href="agreement.html" target="_blank">обработку персональных данных</a></p>
+                        <p class="text-muted small mb-3">Заполняя данную форму, вы даёте согласие на <a href="{% url 'agreement' %}" target="_blank">обработку персональных данных</a></p>
                         <div class="form-group">
                             {{ pickup_form.email }}
                             <div class="invalid-feedback">
@@ -130,7 +130,7 @@
                     <div class="col-lg-4 col-md-4">
                         <p class="text-muted">Сообщите свои данные для доставки. После оформления заказа с вами свяжется менеджер для проверки данных и уточнения деталей заказа</p>
                         <p class="text-danger small">Стоимость доставки не входит в сумму заказа и рассчитывается отдельно после оформления заказа на сайте</p>
-                        <p class="text-muted small m-0">Заполняя данную форму, вы даёте согласие на <a href="agreement.html" target="_blank">обработку персональных данных</a></p>
+                        <p class="text-muted small m-0">Заполняя данную форму, вы даёте согласие на <a href="{% url 'agreement' %}" target="_blank">обработку персональных данных</a></p>
                     </div>
                 </div>
                 <div class="d-flex justify-content-between pt-4 pb-5">
