--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -50,43 +50,44 @@
         </div>
         <div class="col-lg-6 pl-lg-5">
             <h2 class="h4 m-0 mb-3 font-weight-normal">Информация для доставки</h2>
-            <form class="needs-validation" novalidate>
+            <form class="needs-validation" novalidate method="POST" action="">
+                {% csrf_token %}
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="+7 *** *** ** **" id="ConsumerProfilePhone" required>
+                    {{ userinfo_form.phone }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Фамилия Имя Отчество" required>
+                    {{ userinfo_form.full_name }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Почтовый индекс" required>
+                    {{ userinfo_form.postcode }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Россия" disabled>
+                    {{ userinfo_form.country }}
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Регион / Область" required>
+                    {{ userinfo_form.region }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Город / Населённый пункт" required>
+                    {{ userinfo_form.locality }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Улица, дом, квартира / офис" required>
+                    {{ userinfo_form.address }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
