--- a/templates/orders/cart_address.html
+++ b/templates/orders/cart_address.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <p class="mb-3">Мы сообщим вам когда заказ будет доступен для самовывоза</p>
-                        <p class="text-muted small mb-3">Заполняя данную форму, вы даёте согласие на <a href="{% url 'agreement' %}" target="_blank">обработку персональных данных</a></p>
+                        <!-- <p class="text-muted small mb-3">Заполняя данную форму, вы даёте согласие на <a href="{% url 'agreement' %}" target="_blank">обработку персональных данных</a></p> -->
                         <div class="form-group">
                             {{ pickup_form.email }}
                             <div class="invalid-feedback">
@@ -66,8 +66,8 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-between pt-5 pb-5">
-                    <a href="cart.html" class="btn btn-dark btn-sm font-2"><i class="fas fa-chevron-left fa-sm mr-3"></i>назад</a>
-                    <button class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>оформить заказ</button> <!-- Ведёт на cart-success.html (этот коммент надо удалить из кода страницы)-->
+                    <a href="{% url 'cart' %}" class="btn btn-dark btn-sm font-2"><i class="fas fa-chevron-left fa-sm mr-3"></i>назад</a>
+                    <button class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>оформить заказ</button>
                 </div>
             </form>
 
@@ -130,12 +130,12 @@
                     <div class="col-lg-4 col-md-4">
                         <p class="text-muted">Сообщите свои данные для доставки. После оформления заказа с вами свяжется менеджер для проверки данных и уточнения деталей заказа</p>
                         <p class="text-danger small">Стоимость доставки не входит в сумму заказа и рассчитывается отдельно после оформления заказа на сайте</p>
-                        <p class="text-muted small m-0">Заполняя данную форму, вы даёте согласие на <a href="{% url 'agreement' %}" target="_blank">обработку персональных данных</a></p>
+                        <!-- <p class="text-muted small m-0">Заполняя данную форму, вы даёте согласие на <a href="{% url 'agreement' %}" target="_blank">обработку персональных данных</a></p> -->
                     </div>
                 </div>
                 <div class="d-flex justify-content-between pt-4 pb-5">
-                    <a href="cart.html" class="btn btn-dark btn-sm font-2"><i class="fas fa-chevron-left fa-sm mr-3"></i>назад</a>
-                    <button class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>оформить заказ</button> <!-- Ведёт на cart-success.html (этот коммент надо удалить из кода страницы)-->
+                    <a href="{% url 'cart' %}" class="btn btn-dark btn-sm font-2"><i class="fas fa-chevron-left fa-sm mr-3"></i>назад</a>
+                    <button class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>оформить заказ</button>
                 </div>
             </form>
         </div>
