--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -19,33 +19,41 @@
     <div class="row pb-5">
         <div class="col-lg-6 pr-lg-5">
             <h2 class="h4 m-0 mb-3 font-weight-normal">Настройка профиля</h2>
-            <form class="needs-validation mb-5" novalidate>
+            <form class="needs-validation mb-5" novalidate method="POST" action="{% url 'profile' %}">
+                {% csrf_token %}
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Ваш E-mail" value="username@mail.ru" required>
+                    {{ change_pass_form.email }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>                        
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Старый пароль" required>
+                    {{ change_pass_form.old_password }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Новый пароль" required>
+                    {{ change_pass_form.new_password1 }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Подтвердить новый пароль" required>
+                    {{ change_pass_form.new_password2 }}
                     <div class="invalid-feedback">
                         Это поле должно быть заполнено
                     </div>
                 </div>
+                {% for field in change_pass_form %}
+                    {% for error in field.errors %}
+                        <div class="alert alert-danger small mt-4 mb-4" role="alert">
+                            <strong>Ошибка!</strong> {{ error }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
 
-                <button class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>сохранить</button>
+                <button name="change-pass-form" class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>сохранить</button>
             </form>
         </div>
         <div class="col-lg-6 pl-lg-5">
@@ -92,8 +100,7 @@
                         Это поле должно быть заполнено
                     </div>
                 </div>
-
-                <button class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>сохранить</button>
+                <button name="user-info-form" class="btn btn-primary btn-sm font-2" type="submit"><i class="fas fa-check mr-2"></i>сохранить</button>
             </form>
         </div>
     </div>
