--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -12,14 +12,14 @@
             <div class="col-lg-6">
                 <div class="header-image" style="background-image: url({% static 'images/hbg1.jpg' %});"></div>
                 <div class="header-container d-flex justify-content-center align-items-center">
-                    <a href="catalogue-categories.html" class="stretched-link px-4 py-3 bg-cp text-white font-2">церковные товары</a>
+                    <a href="{% url 'product_type' 'tserkovnye-tovary' %}" class="stretched-link px-4 py-3 bg-cp text-white font-2">церковные товары</a>
                 </div>
             </div>
 
             <div class="col-lg-6">
                 <div class="header-image" style="background-image: url({% static 'images/hbg2.jpg' %});"></div>
                 <div class="header-container d-flex justify-content-center align-items-center">
-                    <a href="catalogue-categories.html" class="stretched-link px-4 py-3 bg-primary text-white font-2">товары из овчины</a>
+                    <a href="{% url 'product_type' 'izdeliia-iz-ovchiny' %}" class="stretched-link px-4 py-3 bg-primary text-white font-2">товары из овчины</a>
                 </div>
             </div>
 
@@ -39,7 +39,7 @@
     </ol>
     <div class="carousel-inner">
     <div class="carousel-item active">
-    <img src="{% static 'images/carousel1.jpg' %}" class="d-block w-100" alt="...">
+    <img src="#" class="d-block w-100" alt="...">
     <div class="carousel-caption pr-4">
     <h3 class="bg-white text-dark d-inline-block pl-0 pr-3 pt-2 pb-1 m-0">Церковные товары</h3>
     <br>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="carousel-item">
-    <img src="{% static 'images/carousel2.jpg' %}" class="d-block w-100" alt="...">
+    <img src="#" class="d-block w-100" alt="...">
     <div class="carousel-caption pr-4">
     <h3 class="bg-white text-dark d-inline-block pl-0 pr-3 pt-2 pb-1 m-0">Овчинка стоит выделки</h3>
     <br>
@@ -68,7 +68,7 @@
     <div class="col-lg-4 d-block d-md-flex d-lg-block">
     <div class="mr-0 mr-md-2 mr-lg-0">
     <div class="carousel-item d-block float-none mb-4">
-    <img src="{% static 'images/banner1.jpg' %}" class="d-block w-100" alt="...">
+    <img src="#" class="d-block w-100" alt="...">
     <div class="carousel-caption pr-4">
     <h3 class="h5 bg-white text-dark d-inline-block pl-0 pr-3 pt-2 pb-1 m-0 font-weight-normal">У нас пополнение</h3>
     <br>
@@ -82,7 +82,7 @@
 
     <div class="ml-0 ml-md-2 ml-lg-0">
     <div class="carousel-item d-block float-none">
-    <img src="{% static 'images/banner2.jpg' %}" class="d-block w-100" alt="...">
+    <img src="#" class="d-block w-100" alt="...">
     <div class="carousel-caption pr-4">
     <h3 class="h5 bg-white text-dark d-inline-block pl-0 pr-3 pt-2 pb-1 m-0 font-weight-normal">Сезон открыт</h3>
     <br>
@@ -101,106 +101,26 @@
         <section class="pt-5 pb-5">
             <h2 class="h3 m-0 mb-5 text-center font-weight-normal">Новые поступления</h2>
             <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5">
-                        <img src="{% static 'images/p1_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Коврик универсальный</a>
-                            <span class="d-block small text-muted">Коврики</span>
+                {% for offer in offers %}
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-6">
+                        <div class="product-item mb-5">
+                            <img src="{{ offer.product.get_main_image.image.url|resize:'similar_resize' }}" class="w-100 product-item-img mb-2" alt="">
+                            <div class="eq-h mb-2">
+                                <a href="{{ offer.product.get_absolute_url }}" class="stretched-link text-dark smaller">{{ offer.product.name }}</a>
+                                <span class="d-block small text-muted">{{ offer.product.category.name }}</span>
+                            </div>
+                            {% if offer.sale %}
+                                <span class="font-2 mr-2"><del>{{ offer.price_without_sale }}</del></span>
+                                <span class="font-2 text-danger">{{ offer.price }}<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
+                            {% else %}
+                                <span class="font-2 text-dark">{{ offer.price }}<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
+                            {% endif %}
                         </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5 cp">
-                        <img src="{% static 'images/p2_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Скуфья с бортиком</a>
-                            <span class="d-block small text-muted">Камилавки и скуфьи</span>
-                        </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">880<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5 cp">
-                        <img src="{% static 'images/p3_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Скуфья афонская</a>
-                            <span class="d-block small text-muted">Камилавки и скуфьи</span>
-                        </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">840<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5">
-                        <img src="{% static 'images/p4_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Чехол для обуви</a>
-                            <span class="d-block small text-muted">Чехлы для обуви</span>
-                        </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">100<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5 cp">
-                        <img src="{% static 'images/p5_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Ниспадающий платок</a>
-                            <span class="d-block small text-muted">Платки</span>
-                        </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5">
-                        <img src="{% static 'images/p6_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Коврик автомобильный</a>
-                            <span class="d-block small text-muted">Коврики</span>
-                        </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">1050<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5 cp">
-                        <img src="{% static 'images/p7_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Съёмный фиксатор для облачений</a>
-                            <span class="d-block small text-muted">Чехлы для облачения</span>
-                        </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">200<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                    <div class="product-item mb-5">
-                        <img src="{% static 'images/p8_sm.jpg' %}" class="w-100 product-item-img mb-2" alt="">
-                        <div class="eq-h mb-2">
-                            <a href="product.html" class="stretched-link text-dark smaller">Тапочки женские</a>
-                            <span class="d-block small text-muted">Тапочки</span>
-                        </div>
-                        <!--                            <span class="font-2 mr-2"><del>940</del></span>-->
-                        <!--                            <span class="font-2 text-danger">850<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>-->
-                        <span class="font-2 text-dark">1000<i class="fas fa-ruble-sign fa-xs ml-1"></i></span>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
             <div class="text-center">
-                <a href="catalogue-items.html" class="btn btn-outline-primary btn-sm font-2">все новинки</a>
+                <a href="{% url 'new_product_type' 'tserkovnye-tovary' %}" class="btn btn-outline-primary btn-sm font-2">все новинки</a>
             </div>
         </section>
     </div>
@@ -247,33 +167,14 @@
     <div class="container">
         <section class="pt-5 pb-4 d-none d-md-block">
             <div class="row">
-                <div class="col-lg-6 col-md-6">
-                    <div class="category-item d-flex justify-content-start align-items-center pb-3 mb-3 justify-content-md-end align-items-md-center flex-md-column mb-md-4 pb-md-0 px-md-4 bg-cc">
-                        <img src="{% static 'images/c1.png' %}" alt="" class="my-md-auto">
-                        <a href="catalogue-categories.html" class="stretched-link font-2 text-dark bg-white pl-3 pt-md-2 pb-md-0 px-md-3">Церковные товары</a>
+                {% for product_type in main_product_types %}
+                    <div class="col-lg-6 col-md-6">
+                        <div class="category-item {% if product_type.name == 'Церковные товары' %} bg-cc {% else %} bg-ncc {% endif %} d-flex justify-content-start align-items-center pb-3 mb-3 justify-content-md-end align-items-md-center flex-md-column mb-md-4 pb-md-0 px-md-4">
+                            <img src="{{ product_type.image.url|resize:'category_resize' }}" alt="" class="my-md-auto">
+                            <a href="{{ product_type.get_absolute_url }}" class="stretched-link font-2 text-dark bg-white pl-3 pt-md-2 pb-md-0 px-md-3">{{ product_type.name }}</a>
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6">
-                    <div class="category-item d-flex justify-content-start align-items-center pb-3 mb-3 justify-content-md-end align-items-md-center flex-md-column mb-md-4 pb-md-0 px-md-4 bg-ncc">
-                        <img src="{% static 'images/c2.png' %}" alt="" class="my-md-auto">
-                        <a href="catalogue-categories.html" class="stretched-link font-2 text-dark bg-white pl-3 pt-md-2 pb-md-0 px-md-3">Изделия из овчины</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6">
-                    <div class="category-item d-flex justify-content-start align-items-center pb-3 mb-3 justify-content-md-end align-items-md-center flex-md-column mb-md-4 pb-md-0 px-md-4 bg-ncc">
-                        <img src="{% static 'images/c3.png' %}" alt="" class="my-md-auto">
-                        <a href="catalogue-categories.html" class="stretched-link font-2 text-dark bg-white pl-3 pt-md-2 pb-md-0 px-md-3">Для охоты и рыбалки</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-6">
-                    <div class="category-item d-flex justify-content-start align-items-center pb-3 mb-3 justify-content-md-end align-items-md-center flex-md-column mb-md-4 pb-md-0 px-md-4 bg-ncc">
-                        <img src="{% static 'images/c4.png' %}" alt="" class="my-md-auto">
-                        <a href="catalogue-categories.html" class="stretched-link font-2 text-dark bg-white pl-3 pt-md-2 pb-md-0 px-md-3">Чехлы для одежды</a>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </section>
     </div>
@@ -308,21 +209,8 @@
 
         <section class="mb-5 pb-5 small-text-block border-top pt-5">
             <article>
-                <h1 class="h4 mt-0 mb-4 font-weight-normal">Интернет-магазин церковных товаров, изделий из овчины, товаров для охоты и рыбалки и чехлов для одежды</h1>
-                <h2 class="h5 mt-3 mb-1 font-weight-bolder smaller" style="font-family:'Roboto">Большой выбор товаров</h2>
-                <p class="small text-muted mb-1 lh-fix">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
-                <p class="small text-muted mb-1 lh-fix">Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами.</p>
-                <p class="small text-muted mb-1 lh-fix">«Что со мной случилось? » – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах.</p>
-
-                <h2 class="h5 mt-3 mb-1 font-weight-bolder smaller" style="font-family:'Roboto">Доставка с примеркой</h2>
-                <p class="small text-muted mb-1 lh-fix">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
-                <p class="small text-muted mb-1 lh-fix">Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами.</p>
-                <p class="small text-muted mb-1 lh-fix">«Что со мной случилось? » – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах.</p>
-
-                <h2 class="h5 mt-3 mb-1 font-weight-bolder smaller" style="font-family:'Roboto">Оплата и возврат</h2>
-                <p class="small text-muted mb-1 lh-fix">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.</p>
-                <p class="small text-muted mb-1 lh-fix">Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами.</p>
-                <p class="small text-muted mb-1 lh-fix">«Что со мной случилось? » – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах.</p>
+                <h1 class="h4 mt-0 mb-4 font-weight-normal">{{ about_us.title }}</h1>
+                {{ about_us.text|safe }}
             </article>
         </section>
     </div>
