--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -2,7 +2,9 @@
 {% load imagefit %}
 
 {% block title %}
-    <title>Новости</title>
+    <title>{{ subcategory.seo_title }}</title>
+    <meta name="description" content="{{ subcategory.desc }}">
+    <meta name="keywords" content="{{ subcategory.keywords }}">
 {% endblock title %}
 
 {% block content %}
@@ -42,7 +44,7 @@
 
         <div class="col-xl-9 col-lg-9">
             <div class="row">
-                {% for offer in offers %}
+                {% for offer in page_object.object_list %}
                     <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                         <div class="product-item mb-5 {% if offer.product.product_type.name == 'Церковные товары' %} cp {% endif %}">
                             <img src="{{ offer.product.get_main_image.image.url|resize:'product_list_resize' }}" class="w-100 product-item-img mb-2" alt="">
@@ -63,4 +65,7 @@
         </div>
     </div>
 </div>
+
+{% include '__pagination.html' %}
+
 {% endblock content %}
